site + functions firebase

--- a/SuperID/site/index.html
+++ b/SuperID/site/index.html
@@ -33,12 +33,12 @@
     </div>
 
     <script>
-      // --- URLs das suas Firebase Functions ---
+      // --- URLs das Firebase Functions ---
       const PERFORM_AUTH_URL = "https://performauth-7ql5gsrjha-uc.a.run.app";
       const GET_LOGIN_STATUS_URL =
         "https://getloginstatus-7ql5gsrjha-uc.a.run.app";
 
-      // --- Configurações do Site Parceiro (EXEMPLO) ---
+      // --- Configurações do Site Parceiro ---
       const partnerSiteUrl = "www.teste.com";
       const partnerApiKey =
         "Q2hpa2VuU3VwZXJTdXBlckNoYWluMTIzNDU2Nzg5MGFiY2RlZmdoaWprbG1ub3BxcnN0dXZ3eHl6MTIzNDU2Nzg5MGFiY2RlZmdoaWprbG1ubw==";
